# portfolio-ICP

./: CMakeLists.txt  README.md
cmake/: build-google-test.cmake  build-nanogui.cmake
labo01/: CMakeLists.txt  main.cpp
labo01/src/: DenseStorage.h  Math3D.h  Matrix.h  MatrixBase.h  Operators.h  Vector.h
labo01/tests/: testsTP1Etudiants.cpp
labo02/: CMakeLists.txt  Icp.cpp  IcpApplication.cpp  README.txt
